--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,16 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    clusterGeneration,
+    corpcor,
+    dplyr,
+    kinship2,
+    lme4,
+    MASS,
+    Matrix,
+    mvtnorm,
+    psych
