--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,5 @@ Imports:
     Matrix,
     mvtnorm,
     psych
+URL: https://github.com/CRH1998/LMMgen
+BugReports: https://github.com/CRH1998/LMMgen/issues
