--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
+    base,
     clusterGeneration,
     corpcor,
     dplyr,
@@ -20,6 +21,7 @@ Imports:
     MASS,
     Matrix,
     mvtnorm,
-    psych
+    psych,
+    stats
 URL: https://github.com/CRH1998/LMMgen
 BugReports: https://github.com/CRH1998/LMMgen/issues
