Added LM score function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 S3method(print,FDG)
 export("%>%")
 export(FDG)
+export(Py_func)
 export(RSS_func)
+export(S_matrix_function)
 export(XtVinvX_func)
 export(family_dataset_generator)
 export(generate_kinship_matrix)
@@ -12,6 +14,8 @@ export(get_outcome_variance)
 export(omega_func)
 export(pair_children_with_spouses)
 export(pair_parents_with_children)
+export(parameter_score)
+export(residual_function)
 importFrom(magrittr,"%>%")
 importFrom(stats,rbinom)
 importFrom(stats,rnorm)
