Added fisher scoring algorithm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(RSS_func)
 export(S_matrix_function)
 export(XtVinvX_func)
 export(family_dataset_generator)
+export(find_mle_parameters)
 export(generate_kinship_matrix)
 export(get_outcome_mean)
 export(get_outcome_variance)
@@ -16,6 +17,7 @@ export(pair_children_with_spouses)
 export(pair_parents_with_children)
 export(parameter_score)
 export(residual_function)
+export(score_fisher_function)
 importFrom(magrittr,"%>%")
 importFrom(stats,rbinom)
 importFrom(stats,rnorm)
